<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/mainbg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".FrontPage">

    <Button
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:text="@string/make_drink"
        android:id="@+id/make_drink"
        android:background="@drawable/buttonbg"
        android:layout_above="@+id/queue"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:id="@+id/queue"
        android:background="@drawable/buttonbg"
        android:text="@string/queue"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/make_drink"
        android:layout_alignStart="@+id/make_drink"
        android:textColor="#ffffff" />

    <ImageView
        android:layout_width="125dp"
        android:layout_height="150dp"
        android:id="@+id/imageView"
        android:background="@drawable/shotglass"
        android:contentDescription="@string/frontimage"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome"
        android:id="@+id/textView"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/imageView"
        android:layout_alignLeft="@+id/front_instruct"
        android:layout_alignStart="@+id/front_instruct" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/front_instruct"
        android:id="@+id/front_instruct"
        android:textColor="#ffffff"
        android:layout_marginTop="56dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
