<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/secondarybg"
    tools:context="com.example.benjamin.sierra.DrinkList">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/drink_list_welcome"
        android:id="@+id/drink_list_welcome"
        android:layout_marginTop="67dp"
        android:textColor="#ffffff"
        android:textIsSelectable="true"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:text="@string/LoadingInitalText"
        android:id="@+id/btnDrink1"
        android:background="@drawable/drinkbg"
        android:layout_marginLeft="84dp"
        android:layout_marginStart="84dp"
        android:layout_below="@+id/drink_list_welcome"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="208dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:text="@string/LoadingInitalText"
        android:id="@+id/btnDrink2"
        android:background="@drawable/drinkbg"
        android:layout_alignTop="@+id/btnDrink1"
        android:layout_toRightOf="@+id/btnDrink1"
        android:layout_toEndOf="@+id/btnDrink1" />

    <Button
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:text="@string/LoadingInitalText"
        android:id="@+id/btnDrink3"
        android:background="@drawable/drinkbg"
        android:layout_below="@+id/btnDrink1"
        android:layout_alignLeft="@+id/btnDrink1"
        android:layout_alignStart="@+id/btnDrink1" />

    <Button
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:text="@string/LoadingInitalText"
        android:id="@+id/btnDrink4"
        android:background="@drawable/drinkbg"
        android:layout_alignTop="@+id/btnDrink3"
        android:layout_toRightOf="@+id/btnDrink3"
        android:layout_toEndOf="@+id/btnDrink3" />

    <Button
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:text="@string/LoadingInitalText"
        android:id="@+id/btnDrink5"
        android:background="@drawable/drinkbg"
        android:layout_below="@+id/btnDrink3"
        android:layout_alignLeft="@+id/btnDrink3"
        android:layout_alignStart="@+id/btnDrink3" />

    <Button
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:text="@string/OrderDrink"
        android:id="@+id/btnPlaceOrder"
        android:background="@drawable/drinkbg"
        android:layout_marginTop="86dp"
        android:layout_below="@+id/btnDrink5"
        android:layout_alignLeft="@+id/btnDrink5"
        android:layout_alignStart="@+id/btnDrink5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/LoadingInitalText"
        android:id="@+id/txtDrinkOrder"
        android:layout_below="@+id/btnDrink5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:text="@string/CancelDrink"
        android:id="@+id/btnCancelOrder"
        android:background="@drawable/drinkbg"
        android:layout_alignTop="@+id/btnPlaceOrder"
        android:layout_toRightOf="@+id/btnPlaceOrder"
        android:layout_toEndOf="@+id/btnPlaceOrder" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Success"
        android:id="@+id/txtSuccess"
        android:textColor="#FFFFFF"
        android:shadowColor="#000000"
        android:shadowDx="0.0"
        android:shadowDy="0.0"
        android:shadowRadius="10.0"
        android:layout_marginTop="52dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/drink_list_welcome" />

</RelativeLayout>
